fix(styles): wrapper footer being too high up in desktop size

--- a/client/styles/strider.less
+++ b/client/styles/strider.less
@@ -313,7 +313,6 @@ hero-vsub-unit label {
   body .wrap {
     padding-top: 50px;
     padding-bottom: 51px;
-    margin-bottom: -51px;
   }
 
   .nav-collapse {
